plugins {
    id 'com.android.application'
    id 'kotlin-android'
}

android {
    compileSdkVersion 36

    defaultConfig {
        namespace = 'com.github.tvbox.osc'
        applicationId 'com.jvhuiys.player'
        minSdkVersion 24
        targetSdkVersion 28
        versionCode 1
        versionName '20260823-2222'
        multiDexEnabled = true
        //设置room的Schema的位置
        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }

    signingConfigs {
        release {
            storeFile file(RELEASE_STORE_FILE)
            storePassword RELEASE_STORE_PASSWORD
            keyAlias RELEASE_KEY_ALIAS
            keyPassword RELEASE_KEY_PASSWORD
            enableV1Signing = true
            enableV2Signing = true
            enableV3Signing = true
        }
    }

    packagingOptions {
        jniLibs {
            useLegacyPackaging = true
        }
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/beans.xml'
    }

    buildTypes {
        release {
            signingConfig = signingConfigs.release
            minifyEnabled true
            shrinkResources = true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }

        debug {
            signingConfig = signingConfigs.release
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt')
        }
    }

    flavorDimensions += ["abi"]
    productFlavors {
  //      armeabi {
  //          dimension = "abi"
  //          ndk {
  //              abiFilters 'armeabi-v7a'
  //          }
  //      }
        arm64 {
            dimension = "abi"
            ndk {
                abiFilters 'arm64-v8a'
            }
        }
    }

    compileOptions {
        coreLibraryDesugaringEnabled = true   //xuameng 启用Java 8脱糖
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    kotlinOptions {
        jvmTarget = "1.8"
    }

    lintOptions {
        checkReleaseBuilds = false
        abortOnError = false
    }
}

configurations.all {            //xuameng新增解决编译
    resolutionStrategy {
          force 'org.dom4j:dom4j:2.1.4'
    }
    exclude group: 'xpp3', module: 'xpp3'
}

dependencies {
    api fileTree(dir: "libs", include: ["*.jar","*.aar"])
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'  //xuameng 启用Java 8脱糖
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
    implementation 'org.nanohttpd:nanohttpd:2.3.1'          //xuameng http服务器
    implementation 'org.fourthline.cling:cling-core:2.1.2'  //xuameng 投屏
    implementation 'org.fourthline.cling:cling-support:2.1.2'  //xuameng 投屏
    compileOnly 'javax.enterprise:cdi-api:1.2'  //xuameng 投屏
    compileOnly 'javax.inject:javax.inject:1'  //xuameng 投屏
    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'  //xuameng 投屏
    compileOnly 'javax.servlet:javax.servlet-api:3.1.0'  //xuameng 投屏
    compileOnly 'com.google.j2objc:j2objc-annotations:2.8'  //xuameng exo okhttpdatasource用
    compileOnly "com.google.errorprone:error_prone_annotations:2.23.0"  //xuameng exo okhttpdatasource用
    implementation 'com.google.zxing:core:3.5.1'            //xuameng 二维码
    implementation 'androidx.appcompat:appcompat:1.7.0'     //xuameng UI 组件
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'   //xuameng响应布局
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.11.0'  //xuameng生命周期管理
    implementation 'androidx.recyclerview:recyclerview:1.4.0'      //xuaemng列表展示
    implementation 'com.squareup.okhttp3:okhttp:5.4.0'       //xuameng okhttp
    annotationProcessor 'androidx.room:room-compiler:2.8.4'    //xuameng注释
    implementation 'androidx.room:room-runtime:2.8.4'      //xuameng数据库
    implementation 'androidx.multidex:multidex:2.0.1'      //xuameng多Dex支持库
    implementation 'com.squareup.okio:okio:3.3.0'          //xuameng数据处理
    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.49-androidx'    //xuameng RecyclerView 的适配器
    implementation 'com.kingja.loadsir:loadsir:1.3.8'    //xuameng 页面加载   
    implementation 'com.google.code.gson:gson:2.10.1'    //xuameng json序列化
    implementation 'com.squareup.picasso:picasso:2.71828'  //xuameng 图片加载
    implementation 'me.jessyan:autosize:1.2.1'      //xuameng自动适配屏幕尺寸
    implementation('com.thoughtworks.xstream:xstream:1.4.20') {      //xuameng xml json互转
        exclude group: 'xmlpull', module: 'xmlpull'
    }
    implementation 'org.dom4j:dom4j:2.1.4'   //xuameng新增解决编译  Java XML
    implementation 'org.greenrobot:eventbus:3.3.1'   //xuameng订阅事件
    implementation 'com.orhanobut:hawk:2.0.1'    //xuameng 简单存储

    implementation project(":player")
    implementation project(":quickjs")
    implementation 'com.lzy.net:okgo:3.0.4'           //xuameng  基于okhttp3实现
    implementation 'com.owen:tv-recyclerview:3.0.0'   //xuameng  recyclerview
    implementation 'com.github.getActivity:XXPermissions:18.5'     //xuameng权限
    implementation 'org.jsoup:jsoup:1.16.1'  //xuameng 解析html
    implementation 'com.github.hedzr:android-file-chooser:v1.2.0-final'   //xuameng 文件选择
    implementation 'commons-io:commons-io:2.13.0'   //xuameng 文件类FileUtils
    implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'    //xuameng 文件编码
    implementation 'com.github.alidili:FlowLayout:v1.5'  //xuameng搜索历史
    implementation 'com.github.ctiao:DanmakuFlameMaster:0.9.25'
    //支持http3
    implementation("org.chromium.net:cronet-embedded:119.6045.31") {
        exclude group: 'com.squareup.okhttp3'
    }
    implementation 'org.brotli:dec:0.1.2'
    //安卓工具类
    implementation 'com.blankj:utilcodex:1.31.0'   
    //xuameng exo
    def exoplayerVersion = "1.11.0"
    implementation "androidx.media3:media3-common:$exoplayerVersion"
    implementation "androidx.media3:media3-container:$exoplayerVersion"
    implementation "androidx.media3:media3-database:$exoplayerVersion"
    implementation "androidx.media3:media3-datasource:$exoplayerVersion"
    implementation "androidx.media3:media3-datasource-rtmp:$exoplayerVersion"
    implementation "androidx.media3:media3-decoder:$exoplayerVersion"
    implementation "androidx.media3:media3-effect:$exoplayerVersion"
    implementation "androidx.media3:media3-exoplayer:$exoplayerVersion"
    implementation "androidx.media3:media3-exoplayer-dash:$exoplayerVersion"
    implementation "androidx.media3:media3-exoplayer-hls:$exoplayerVersion"
    implementation "androidx.media3:media3-exoplayer-rtsp:$exoplayerVersion"
    implementation "androidx.media3:media3-exoplayer-smoothstreaming:$exoplayerVersion"
    implementation "androidx.media3:media3-extractor:$exoplayerVersion"
    implementation "androidx.media3:media3-ui:$exoplayerVersion"
    implementation 'org.jellyfin.media3:media3-ffmpeg-decoder:1.9.0+1'    //xuameng ffmpeg扩展
    implementation "io.github.anilbeesetti:nextlib-media3ext:1.10.1-0.13.0"  //xuameng nextlib扩展
}
